--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -1,4 +1,4 @@
-name: Fetch IPA URLs
+name: Fetch IPA URLs and Update JSON
 
 on:
   workflow_dispatch:
@@ -7,11 +7,22 @@ jobs:
   fetch-ipa:
     runs-on: ubuntu-latest
     steps:
-      - name: Get IPA URLs
+      - name: Get IPA URL
+        id: get_ipa_url
         run: |
-          curl -s "https://api.github.com/repos/whoeevee/EeveeSpotify/releases" | 
-          jq -r '.[] | .assets[] | select(.name | endswith(".ipa")) | .browser_download_url' > ipa_urls.txt
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      - name: Display IPA URLs
-        run: cat ipa_urls.txt
+          IPA_URL=$(curl -s "https://api.github.com/repos/whoeevee/EeveeSpotify/releases/latest" | 
+          jq -r '.assets[] | select(.name | endswith(".ipa")) | .browser_download_url')
+          echo "ipa_url=$IPA_URL" >> $GITHUB_ENV
+      - name: Checkout Repo
+        uses: actions/checkout@v2
+      - name: Update sidestore.json
+        run: |
+          jq --arg ipa_url "$IPA_URL" '.apps[0].downloadURL = $ipa_url' sidestore.json > temp.json
+          mv temp.json sidestore.json
+      - name: Commit Changes
+        run: |
+          git config --local user.email "niravraval34@gmail.com"
+          git config --local user.name "Nirav-raval"
+          git add sidestore.json
+          git commit -m "Update downloadURL with latest IPA file URL"
+          git push
