--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -13,38 +13,23 @@ jobs:
           IPA_URL=$(curl -s "https://api.github.com/repos/whoeevee/EeveeSpotify/releases/latest" | 
           jq -r '.assets[] | select(.name | endswith(".ipa")) | .browser_download_url')
           echo "ipa_url=$IPA_URL" >> $GITHUB_ENV
-          
       - name: Checkout Repo
         uses: actions/checkout@v2
-        with:
-          fetch-depth: 0  # Ensure full repo checkout
-
-      - name: Debug Directory Structure
-        run: |
-          echo "Root directory contents:"
-          ls
-          echo "sideload directory contents:"
-          ls sideload || echo "sideload directory not found"
-
       - name: Verify IPA URL
         run: |
+          echo "Fetched IPA URL: $IPA_URL"
           echo "Fetched IPA URL: ${{ env.ipa_url }}"
-
       - name: Update sidestore.json
         run: |
-          # Print original sidestore.json for debugging
-          cat sideload/sidestore.json  
-          # Update the downloadURL with the fetched IPA URL
-          jq --arg ipa_url "${{ env.ipa_url }}" '.apps[0].downloadURL = $ipa_url' sideload/sidestore.json > temp.json
-          # Move the temp file back to sideload/sidestore.json to finalize changes
-          mv temp.json sideload/sidestore.json
-          # Print modified sidestore.json for confirmation
-          cat sideload/sidestore.json  
-
+          cat sidestore.json  # Print before modification for debugging
+          jq --arg ipa_url "$IPA_URL" '.apps[0].downloadURL = $ipa_url' sidestore.json > temp.json
+          jq --arg ipa_url "${{ env.ipa_url }}" '.apps[0].downloadURL = $ipa_url' sidestore.json > temp.json
+          cat temp.json  # Print after modification to confirm the change
+          mv temp.json sidestore.json
       - name: Commit Changes
         run: |
           git config --local user.email "niravraval34@gmail.com"
           git config --local user.name "Nirav-raval"
-          git add sideload/sidestore.json
+          git add sidestore.json
           git commit -m "Update downloadURL with latest IPA file URL"
           git push
