--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -13,23 +13,35 @@ jobs:
           IPA_URL=$(curl -s "https://api.github.com/repos/whoeevee/EeveeSpotify/releases/latest" | 
           jq -r '.assets[] | select(.name | endswith(".ipa")) | .browser_download_url')
           echo "ipa_url=$IPA_URL" >> $GITHUB_ENV
+
       - name: Checkout Repo
         uses: actions/checkout@v2
+
       - name: Verify IPA URL
         run: |
-          echo "Fetched IPA URL: $IPA_URL"
           echo "Fetched IPA URL: ${{ env.ipa_url }}"
+
       - name: Update sidestore.json
         run: |
-          cat sidestore.json  # Print before modification for debugging
-          jq --arg ipa_url "$IPA_URL" '.apps[0].downloadURL = $ipa_url' sidestore.json > temp.json
+          # Print before modification for debugging
+          cat sidestore.json  
+          # Update the downloadURL with the fetched IPA URL
           jq --arg ipa_url "${{ env.ipa_url }}" '.apps[0].downloadURL = $ipa_url' sidestore.json > temp.json
-          cat temp.json  # Print after modification to confirm the change
+          # Move the updated file back to sidestore.json
           mv temp.json sidestore.json
-      - name: Commit Changes
+          # Print after modification to confirm the change
+          cat sidestore.json  
+
+      - name: Check for Changes and Commit if Needed
         run: |
-          git config --local user.email "niravraval34@gmail.com"
-          git config --local user.name "Nirav-raval"
-          git add sidestore.json
-          git commit -m "Update downloadURL with latest IPA file URL"
-          git push
+          # Check if there are changes in sidestore.json
+          if git diff --exit-code sidestore.json; then
+            echo "No changes detected in sidestore.json, skipping commit."
+          else
+            echo "Changes detected, committing..."
+            git config --local user.email "niravraval34@gmail.com"
+            git config --local user.name "Nirav-raval"
+            git add sidestore.json
+            git commit -m "Update downloadURL with latest IPA file URL"
+            git push
+          fi
