--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -9,7 +9,7 @@ jobs:
   fetch-ipa:
     runs-on: ubuntu-latest
     steps:
-      - name: Get IPA URL, Version, Size, and Date
+      - name: Get IPA URL, Version, and Size
         id: get_ipa_url
         run: |
           # Fetch the latest IPA URL
@@ -22,15 +22,11 @@ jobs:
           # Fetch file size (in bytes) from the asset information
           SIZE=$(curl -s "https://api.github.com/repos/whoeevee/EeveeSpotify/releases/latest" | 
           jq '.assets[] | select(.name | endswith(".ipa")) | .size')
-          
-          # Get the current date in ISO format
-          VERSION_DATE=$(date -u +"%Y-%m-%d")
 
           # Export as environment variables
           echo "ipa_url=$IPA_URL" >> $GITHUB_ENV
           echo "version=$VERSION" >> $GITHUB_ENV
           echo "size=$SIZE" >> $GITHUB_ENV
-          echo "version_date=$VERSION_DATE" >> $GITHUB_ENV
 
       - name: Checkout Repo
         uses: actions/checkout@v2
@@ -40,25 +36,21 @@ jobs:
           echo "Fetched IPA URL: ${{ env.ipa_url }}"
           echo "Extracted Version: ${{ env.version }}"
           echo "File Size: ${{ env.size }} bytes"
-          echo "Version Date: ${{ env.version_date }}"
 
       - name: Update sidestore.json
         run: |
           # Print before modification for debugging
           cat sidestore.json
-          # Update downloadURL, version, size, and versionDate fields in both `apps[0]` and `versions[0]`
+          # Update downloadURL, version, and size fields in both `apps[0]` and `versions[0]`
           jq --arg ipa_url "${{ env.ipa_url }}" \
              --arg version "${{ env.version }}" \
              --argjson size "${{ env.size }}" \
-             --arg version_date "${{ env.version_date }}" \
              '.apps[0].downloadURL = $ipa_url | 
               .apps[0].version = $version | 
-              .apps[0].size = $size | 
-              .apps[0].versionDate = $version_date |
+              .apps[0].size = $size |
               .apps[0].versions[0].downloadURL = $ipa_url |
               .apps[0].versions[0].version = $version |
-              .apps[0].versions[0].size = $size |
-              .apps[0].versions[0].date = $version_date' \
+              .apps[0].versions[0].size = $size' \
              sidestore.json > temp.json
           # Move the updated file back to sidestore.json
           mv temp.json sidestore.json
@@ -75,6 +67,6 @@ jobs:
             git config --local user.email "niravraval34@gmail.com"
             git config --local user.name "Nirav-raval"
             git add sidestore.json
-            git commit -m "Update downloadURL, version, size, and versionDate with latest IPA file information"
+            git commit -m "Update downloadURL, version, and size with latest IPA file information"
             git push
           fi
