--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -16,17 +16,32 @@ jobs:
           IPA_URL=$(curl -s "https://api.github.com/repos/whoeevee/EeveeSpotify/releases/latest" | 
           jq -r '.assets[] | select(.name | endswith(".ipa")) | .browser_download_url')
           
-          # Extract version from URL (between "EeveeSpotify-" and ".ipa")
-          VERSION=$(echo "$IPA_URL" | sed -n 's/.*EeveeSpotify-\(.*\)\.ipa/\1/p')
-          
-          # Fetch file size (in bytes) from the asset information
+          if [ -z "$IPA_URL" ]; then
+            echo "Error: IPA URL not found."
+            exit 1
+          fi
+
+          # Extract version from URL using regex
+          VERSION=$(echo "$IPA_URL" | grep -oP 'EeveeSpotify-\K[\d.]+(?=\.ipa)')
+
+          if [ -z "$VERSION" ]; then
+            echo "Error: Version not extracted from URL."
+            exit 1
+          fi
+
+          # Fetch file size (in bytes) from asset information
           SIZE=$(curl -s "https://api.github.com/repos/whoeevee/EeveeSpotify/releases/latest" | 
           jq '.assets[] | select(.name | endswith(".ipa")) | .size')
 
-          # Export as environment variables
-          echo "ipa_url=$IPA_URL" >> $GITHUB_ENV
-          echo "version=$VERSION" >> $GITHUB_ENV
-          echo "size=$SIZE" >> $GITHUB_ENV
+          if [ -z "$SIZE" ]; then
+            echo "Error: File size not found."
+            exit 1
+          fi
+
+          # Export environment variables with proper escaping
+          echo "ipa_url=${IPA_URL}" >> $GITHUB_ENV
+          echo "version=${VERSION}" >> $GITHUB_ENV
+          echo "size=${SIZE}" >> $GITHUB_ENV
 
       - name: Checkout Repo
         uses: actions/checkout@v2
@@ -40,8 +55,10 @@ jobs:
       - name: Update sidestore.json
         run: |
           # Print before modification for debugging
-          cat sidestore.json
-          # Update downloadURL, version, and size fields in both `apps[0]` and `versions[0]`
+          echo "Before Update:"
+          cat sidestore.json || echo "sidestore.json not found."
+
+          # Update JSON file
           jq --arg ipa_url "${{ env.ipa_url }}" \
              --arg version "${{ env.version }}" \
              --argjson size "${{ env.size }}" \
@@ -52,21 +69,24 @@ jobs:
               .apps[0].versions[0].version = $version |
               .apps[0].versions[0].size = $size' \
              sidestore.json > temp.json
-          # Move the updated file back to sidestore.json
+
+          # Replace the original file
           mv temp.json sidestore.json
-          # Print after modification to confirm the change
+
+          # Print updated file for verification
+          echo "After Update:"
           cat sidestore.json
 
       - name: Check for Changes and Commit if Needed
         run: |
-          # Check if there are changes in sidestore.json
-          if git diff --exit-code sidestore.json; then
-            echo "No changes detected in sidestore.json, skipping commit."
+          # Check for changes in sidestore.json
+          if git diff --quiet sidestore.json; then
+            echo "No changes detected, skipping commit."
           else
             echo "Changes detected, committing..."
             git config --local user.email "niravraval34@gmail.com"
             git config --local user.name "Nirav-raval"
             git add sidestore.json
-            git commit -m "Update downloadURL, version, and size with latest IPA file information"
+            git commit -m "Update sidestore.json with latest IPA details"
             git push
           fi
