--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -9,37 +9,36 @@ jobs:
   fetch-ipa:
     runs-on: ubuntu-latest
     steps:
-      - name: Get IPA URL, Version, Size, Created At Date
+      - name: Get IPA URL, Version, Size, and Created At Date
         id: get_ipa_url
         run: |
-          # Fetch the latest release details from GitHub API
-          RELEASE_INFO=$(curl -s "https://api.github.com/repos/whoeevee/EeveeSpotify/releases/latest")
-          
-          # Extract IPA URL
-          IPA_URL=$(echo "$RELEASE_INFO" | jq -r '.assets[] | select(.name | endswith(".ipa")) | .browser_download_url')
+          # Fetch the latest IPA URL
+          IPA_URL=$(curl -s "https://api.github.com/repos/whoeevee/EeveeSpotify/releases/latest" | 
+          jq -r '.assets[] | select(.name | endswith(".ipa")) | .browser_download_url'| head -n 1)
           
           # Extract version from URL (between "EeveeSpotify-" and ".ipa")
-          VERSION=$(echo "$IPA_URL" | sed -n 's/.*EeveeSpotify-\(.*\)\.ipa/\1/p')
+          VERSION=$(echo "$IPA_URL" | sed -n 's/.*EeveeSpotify-\(.*\)\.ipa/\1/p'| head -n 1)
           
           # Fetch file size (in bytes) from the asset information
-          SIZE=$(echo "$RELEASE_INFO" | jq '.assets[] | select(.name | endswith(".ipa")) | .size')
+          SIZE=$(curl -s "https://api.github.com/repos/whoeevee/EeveeSpotify/releases/latest" | 
+          jq '.assets[] | select(.name | endswith(".ipa")) | .size'| head -n 1)
           
-          # Extract the created_at date from the API response and format it as yyyy-mm-dd
-          CREATED_AT=$(echo "$RELEASE_INFO" | jq -r '.created_at' | sed 's/T/\ /' | sed 's/\..*//')  # Remove the time part
-          FORMATTED_DATE=$(date -d "$CREATED_AT" +"%Y-%m-%d")  # Format the date
-
-          # Export all variables as environment variables
+          # Extract and format the created_at date to yyyy-mmm-dd
+          DATE=$(curl -s "https://api.github.com/repos/whoeevee/EeveeSpotify/releases/latest" | 
+          jq -r '.created_at' | sed -E 's/([0-9]{4})-([0-9]{2})-([0-9]{2})/\1-\2-\3/' | head -n 1)
+          
+          # Export as environment variables with proper quotation
           echo "ipa_url=\"$IPA_URL\"" >> $GITHUB_ENV
           echo "version=\"$VERSION\"" >> $GITHUB_ENV
           echo "size=$SIZE" >> $GITHUB_ENV
-          echo "created_at=\"$FORMATTED_DATE\"" >> $GITHUB_ENV
+          echo "date=\"$DATE\"" >> $GITHUB_ENV
           
           # Debugging output
           echo "Fetched IPA URL: $IPA_URL"
           echo "Extracted Version: $VERSION"
           echo "File Size: $SIZE bytes"
-          echo "Release Created At: $FORMATTED_DATE"
-
+          echo "Created At Date: $DATE"
+      
       - name: Checkout Repo
         uses: actions/checkout@v2
 
@@ -49,27 +48,26 @@ jobs:
           echo "IPA URL: ${{ env.ipa_url }}"
           echo "Version: ${{ env.version }}"
           echo "Size: ${{ env.size }} bytes"
-          echo "Release Created At: ${{ env.created_at }}"
+          echo "Created At Date: ${{ env.date }}"
 
       - name: Update sidestore.json
         run: |
           # Print before modification for debugging
           cat sidestore.json
           
-          # Update downloadURL, version, size, created_at in both `apps[0]` and `versions[0]`
+          # Update downloadURL, version, size, and date fields in both `apps[0]` and `versions[0]`
           jq --arg ipa_url "${{ env.ipa_url }}" \
              --arg version "${{ env.version }}" \
              --argjson size "${{ env.size }}" \
-             --arg created_at "${{ env.created_at }}" \
+             --arg date "${{ env.date }}" \
              '.apps[0].downloadURL = $ipa_url | 
               .apps[0].version = $version | 
               .apps[0].size = $size |
-              .apps[0].versionDate = $created_at |   # Update versionDate
-              .apps[0].createdAt = $created_at |     # Update createdAt for app-level
+              .apps[0].date = $date |
               .apps[0].versions[0].downloadURL = $ipa_url |
               .apps[0].versions[0].version = $version |
               .apps[0].versions[0].size = $size |
-              .apps[0].versions[0].date = $created_at'  # Update date inside versions[0]
+              .apps[0].versions[0].date = $date' \
              sidestore.json > temp.json
              
           # Move the updated file back to sidestore.json
@@ -88,6 +86,6 @@ jobs:
             git config --local user.email "niravraval34@gmail.com"
             git config --local user.name "Nirav-raval"
             git add sidestore.json
-            git commit -m "Update downloadURL, version, size, versionDate, and date with latest IPA file information"
+            git commit -m "Update downloadURL, version, size, and date with latest IPA file information"
             git push
           fi
